testdata/baselines/reference/submodule/compiler/isolatedDeclarationsLiterals.errors.txt
file1.ts(1,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
file1.ts(3,10): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(5,15): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(7,13): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(9,11): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(11,11): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(12,12): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(14,11): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(16,12): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(19,24): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(21,24): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(23,21): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(41,14): error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
file1.ts(43,10): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(45,15): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(47,13): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(49,11): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(51,11): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(53,11): error TS9013: Expression type can't be inferred with --isolatedDeclarations.
file1.ts(55,12): error TS9013: Expression type can't be inferred with --isolatedDeclarations.


==== file1.ts (20 errors) ====
    export const constObject = {
                 ~~~~~~~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
        /** Value Of 1 */
        one: 1,
             ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:3:10: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of 0o1 */
        oneOctal: 0o1,
                  ~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:5:15: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of 0x1 */
        oneHex: 0x1,
                ~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:7:13: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of +1 */
        pOne: +1,
              ~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:9:11: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of -1 */
        mOne: -1,
              ~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:11:11: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        array: [1, -1, 1n, -1n],
               ~~~~~~~~~~~~~~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:12:12: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of 1n */
        onen: 1n,
              ~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:14:11: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of -1n */
        mOnen: -1n,
               ~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:16:12: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
    
        /** Value Of "1" */
        oneStrDoubleQuote: "1",
                           ~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:19:24: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of '1' */
        oneStrSingleQuote: '1',
                           ~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:21:24: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of `1` */
        oneStrTemplate: `1`,
                        ~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:1:14: Add a type annotation to the variable constObject.
!!! related TS9035 file1.ts:23:21: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** A method */
        method(): void {
    
        },
    } as const;
    
    export const one = 1;
    export const oneOctal = 0o1;
    export const oneHex = 0x1;
    export const pOne = +1;
    export const mOne = -1;
    export const onen = 1n;
    export const mOnen = -1n;
    export const oneStrDoubleQuote = "1";
    export const oneStrSingleQuote = '1';
    export const oneStrTemplate = `1`;
    
    export const mutableObject = {
                 ~~~~~~~~~~~~~
!!! error TS9010: Variable must have an explicit type annotation with --isolatedDeclarations.
!!! related TS9027 file1.ts:41:14: Add a type annotation to the variable mutableObject.
        /** Value Of 1 */
        one: 1,
             ~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:41:14: Add a type annotation to the variable mutableObject.
!!! related TS9035 file1.ts:43:10: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of 0o1 */
        oneOctal: 0o1,
                  ~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:41:14: Add a type annotation to the variable mutableObject.
!!! related TS9035 file1.ts:45:15: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of 0x1 */
        oneHex: 0x1,
                ~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:41:14: Add a type annotation to the variable mutableObject.
!!! related TS9035 file1.ts:47:13: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of +1 */
        pOne: +1,
              ~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:41:14: Add a type annotation to the variable mutableObject.
!!! related TS9035 file1.ts:49:11: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of -1 */
        mOne: -1,
              ~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:41:14: Add a type annotation to the variable mutableObject.
!!! related TS9035 file1.ts:51:11: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of 1n */
        onen: 1n,
              ~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:41:14: Add a type annotation to the variable mutableObject.
!!! related TS9035 file1.ts:53:11: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** Value Of -1n */
        mOnen: -1n,
               ~~~
!!! error TS9013: Expression type can't be inferred with --isolatedDeclarations.
!!! related TS9027 file1.ts:41:14: Add a type annotation to the variable mutableObject.
!!! related TS9035 file1.ts:55:12: Add satisfies and a type assertion to this expression (satisfies T as T) to make the type explicit.
        /** A method */
        method(): void {
    
        },
    };
    
    
    